@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Administrator {
}

class Company {
  -designation
  -authFacade
}

class VaccineType {
  -disease
}


Company "1" -- "*" VaccineType: has >
Administrator "1" -- "*" VaccineType: creates >
Company "1" -- "*" Administrator: has >


@enduml